adding line to body

--- a/index.html
+++ b/index.html
@@ -2,9 +2,17 @@
 <html>
 
 <head>
+	<title>Welcome to our Page</title>
 </head>
 <body>
-	
+    <h1> Welcome to our page <h1>
+    	<hr>
+
+    
+
+
+
+    <hr>
 </body>
 	
 
