--- a/index.html
+++ b/index.html
@@ -9,8 +9,15 @@
     	<hr>
         <hr>
 
+        <h2>Jagdeep</h2>
+    <p> Hi my name is Jagdeep Singh and i'm currently studying Interactive Media Desgin at Fanshawe College.</p>
+    <p> I am an international student from Hong Kong. My hobbies inculde learning & trying new things,
+    swimming,cycling,going to cinemas with friends to watch thriller/horror films,traveling,playing Quidditch etc.</p>
 
-    <hr>
+    <p>Convallis ipsum quam feugiat, torquent torquent vitae sem faucibus. Torquent nisi semper, ultrices fringilla nibh. Nisi suspendisse condimentum arcu penatibus scelerisque potenti lobortis. Condimentum congue malesuada bibendum molestie scelerisque montes mi. Diam facilisi fermentum etiam dis. Sociis pellentesque congue, fermentum taciti. Class at per, lobortis diam ante proin viverra et augue nisl facilisi. Natoque a sodales mauris natoque id metus. Malesuada vivamus vehicula faucibus torquent nascetur bibendum sed porttitor, nibh ut! Pulvinar rhoncus pellentesque quisque malesuada semper mattis.</p>
+
+     <hr>
+     
 
 </body>
 	
